[tool.poetry]
name = "hello-starknet"
version = "0.1.0"
description = ""
authors = ["Clément Walter <clement0walter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
install = "^1.3.5"
ecdsa = "^0.17.0"
fastecdsa = "^2.2.3"
sympy = "^1.10.1"
cairo-lang = "^0.8.2"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
cairo-nile = "^0.6.1"
pandas = "^1.3.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
ipython = "^7"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
