[tool.poetry]
name = "hello-starknet"
version = "0.1.0"
description = ""
authors = ["Clément Walter <clement0walter@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
sympy = "^1.10.1"
cairo-lang = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
